SERVER-46397 Only report an index build as aborted if it is currently aborting, not committing

This expands the concurrency control features used by two-phase index
builds to standalone nodes and single-phase index builds so that
concurrent commits and aborts behave correctly.

(cherry picked from commit 2fd22e51e07c93a78a67cbb8d01289b96cb7f60a)

SERVER-46397 add missing 'break'

(cherry picked from commit 3848ef2467665a7c7756eb19b42cb0f523c03535)

SERVER-46397 When an index build abort is received after a stepDown, wait for another signal

Reinstates a logical condition that was removed by
2fd22e51e07c93a78a67cbb8d01289b96cb7f60a

Adds an IndexBuildAction specific to committing a single-phase build

(cherry picked from commit ad244f716cb7478c990a79b196f4877975c74613)