src/mongo/db/index_builds_coordinator_mongod.cpp
@@ -394,15 +394,31 @@ void IndexBuildsCoordinatorMongod::_signalIfCommitQuorumIsSatisfied(
 
 bool IndexBuildsCoordinatorMongod::_signalIfCommitQuorumNotEnabled(
     OperationContext* opCtx, std::shared_ptr<ReplIndexBuildState> replState, bool onStepup) {
-    // Locking order is important here to avoid deadlocks i.e, rstl followed by ReplIndexBuildState
-    // mutex.
-    invariant(opCtx->lockState()->isRSTLLocked());
-
     // TODO SERVER-46557: Revisit this logic to see if we can check replState->commitQuorum for
     // value to be zero to determine whether commit quorum is enabled or not for this index build.
-    if (!enableIndexBuildCommitQuorum) {
-        auto replCoord = repl::ReplicationCoordinator::get(opCtx);
+    auto replCoord = repl::ReplicationCoordinator::get(opCtx);
+
+    if (IndexBuildProtocol::kSinglePhase == replState->protocol) {
+        // Single-phase builds don't support commit quorum, but they must go through the process of
+        // updating their state to synchronize with concurrent abort operations.
+        stdx::unique_lock<Latch> lk(replState->mutex);
+        if (replState->waitForNextAction->getFuture().isReady()) {
+            // If the signal action has been set, it should only be because a concurrent operation
+            // already aborted the index build.
+            auto action = replState->waitForNextAction->getFuture().get(opCtx);
+            invariant(action == IndexBuildAction::kPrimaryAbort,
+                      str::stream() << "action: " << _indexBuildActionToString(action)
+                                    << ", buildUUID: " << replState->buildUUID);
+            LOGV2(4639700,
+                  "Not committing single-phase build because it has already been aborted",
+                  "buildUUID"_attr = replState->buildUUID);
+            return true;
+        }
+        replState->waitForNextAction->emplaceValue(IndexBuildAction::kSinglePhaseCommit);
+        return true;
+    } else if (!enableIndexBuildCommitQuorum) {
         const NamespaceStringOrUUID dbAndUUID(replState->dbName, replState->collectionUUID);
+        repl::ReplicationStateTransitionLockGuard rstl(opCtx, MODE_IX);
         if (replCoord->canAcceptWritesFor(opCtx, dbAndUUID) || onStepup) {
             // Node is primary here.
             stdx::unique_lock<Latch> lk(replState->mutex);
@@ -431,10 +447,6 @@ bool IndexBuildsCoordinatorMongod::_checkVoteCommitIndexCmdSucceeded(const BSONO
 void IndexBuildsCoordinatorMongod::_signalPrimaryForCommitReadiness(
     OperationContext* opCtx, std::shared_ptr<ReplIndexBuildState> replState) {
     auto replCoord = repl::ReplicationCoordinator::get(opCtx);
-    if (!replCoord->getSettings().usingReplSets()) {
-        // Standalones does not support commit quorum.
-        return;
-    }
 
     // Before voting see if we are eligible to skip voting and signal
     // to commit index build if the node is primary.
@@ -549,14 +561,6 @@ Timestamp IndexBuildsCoordinatorMongod::_waitForNextIndexBuildAction(
     OperationContext* opCtx, std::shared_ptr<ReplIndexBuildState> replState) {
     Timestamp commitIndexBuildTimestamp;
 
-    invariant(replState->protocol == IndexBuildProtocol::kTwoPhase);
-
-    // standalones doesn't need to wait for commit or abort index build oplog entry.
-    auto replCoord = repl::ReplicationCoordinator::get(opCtx);
-    if (!replCoord->getSettings().usingReplSets()) {
-        return commitIndexBuildTimestamp;
-    };
-
     // Yield locks and storage engine resources before blocking.
     opCtx->recoveryUnit()->abandonSnapshot();
     Lock::TempRelease release(opCtx->lockState());
@@ -584,11 +588,16 @@ Timestamp IndexBuildsCoordinatorMongod::_waitForNextIndexBuildAction(
         // Reacquire RSTL lock
         repl::ReplicationStateTransitionLockGuard rstl(opCtx, MODE_IX);
         const NamespaceStringOrUUID dbAndUUID(replState->dbName, replState->collectionUUID);
+        auto replCoord = repl::ReplicationCoordinator::get(opCtx);
         auto isMaster = replCoord->canAcceptWritesFor(opCtx, dbAndUUID);
 
         stdx::unique_lock<Latch> lk(replState->mutex);
         switch (nextAction) {
+            case IndexBuildAction::kNoAction:
+                break;
             case IndexBuildAction::kOplogCommit:
+                invariant(replState->protocol == IndexBuildProtocol::kTwoPhase);
+
                 // Sanity check
                 // This signal can be received during primary (drain phase), secondary,
                 // startup( startup recovery) and startup2 (initial sync).
@@ -607,6 +616,7 @@ Timestamp IndexBuildsCoordinatorMongod::_waitForNextIndexBuildAction(
                       "collectionUUID"_attr = replState->collectionUUID);
                 break;
             case IndexBuildAction::kOplogAbort:
+                invariant(replState->protocol == IndexBuildProtocol::kTwoPhase);
                 // Sanity check
                 // This signal can be received during primary (drain phase), secondary,
                 // startup( startup recovery) and startup2 (initial sync).
@@ -623,7 +633,9 @@ Timestamp IndexBuildsCoordinatorMongod::_waitForNextIndexBuildAction(
                       "abortTimestamp"_attr = replState->indexBuildState.getTimestamp().get(),
                       "abortReason"_attr = replState->indexBuildState.getAbortReason().get(),
                       "collectionUUID"_attr = replState->collectionUUID);
+                break;
             case IndexBuildAction::kRollbackAbort:
+                invariant(replState->protocol == IndexBuildProtocol::kTwoPhase);
                 // Currently, We abort the index build before transitioning the state to rollback.
                 // So, we can check if the node state is rollback.
                 break;
@@ -632,7 +644,11 @@ Timestamp IndexBuildsCoordinatorMongod::_waitForNextIndexBuildAction(
                 // coordinator, So, we missed marking the index build aborted on manager. So, it's
                 // important, we exit from here if we are still primary. Otherwise, the index build
                 // gets committed, though our index build was marked aborted.
-                if (isMaster) {
+
+                // Single-phase builds do not replicate abort oplog entries. We do not need to be
+                // primary to abort the index build, and we must continue aborting even in the event
+                // of a state transition because this build will not receive another signal.
+                if (isMaster || IndexBuildProtocol::kSinglePhase == replState->protocol) {
                     uassertStatusOK(Status(
                         ErrorCodes::IndexBuildAborted,
                         str::stream()
@@ -640,6 +656,9 @@ Timestamp IndexBuildsCoordinatorMongod::_waitForNextIndexBuildAction(
                             << " , abort reason:"
                             << replState->indexBuildState.getAbortReason().get_value_or("")));
                 }
+                // Intentionally continue to next case. If we are no longer primary while processing
+                // kPrimaryAbort, fall back to the kCommitQuorumSatisfied case and reset our
+                // 'waitForNextAction'.
             case IndexBuildAction::kCommitQuorumSatisfied:
                 if (!isMaster) {
                     // Reset the promise as the node has stepped down,
@@ -654,8 +673,9 @@ Timestamp IndexBuildsCoordinatorMongod::_waitForNextIndexBuildAction(
                     needsToRetryWait = true;
                 }
                 break;
-            default:
-                MONGO_UNREACHABLE;
+            case IndexBuildAction::kSinglePhaseCommit:
+                invariant(replState->protocol == IndexBuildProtocol::kSinglePhase);
+                break;
         }
 
         if (!needsToRetryWait) {
