src/mongo/db/repl_index_build_state.h
@@ -84,6 +84,10 @@ enum class IndexBuildAction {
      */
     kPrimaryAbort,
     /**
+     * Commit signal set by an index build for a single-phase build.
+     */
+    kSinglePhaseCommit,
+    /**
      * Commit signal set by "voteCommitIndexBuild" cmd and step up.
      */
     kCommitQuorumSatisfied
@@ -230,9 +234,7 @@ struct ReplIndexBuildState {
           indexSpecs(specs),
           protocol(protocol),
           commitQuorum(commitQuorum) {
-        if (IndexBuildProtocol::kTwoPhase == protocol) {
-            waitForNextAction = std::make_unique<SharedPromise<IndexBuildAction>>();
-        }
+        waitForNextAction = std::make_unique<SharedPromise<IndexBuildAction>>();
     }
 
     // Uniquely identifies this index build across replica set members.
